--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
-
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 const pageTitle = "About Me";
 const identity = {
     firstName: "Sarah",
@@ -40,9 +41,7 @@ const textCase = "uppercase";
         }
     </style>
     <body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+        <Header />
         <h1>{pageTitle}</h1>
         <h2>... and my new Astro site!</h2>
 
@@ -87,5 +86,8 @@ const textCase = "uppercase";
                 <p>My goal is not 3 days.</p>
             )
         }
+        <Footer /><script>
+            import "../scripts/menu.js";
+          </script>
     </body>
 </html>
